[package]
name = "zapLB"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
reqwest = "0.12.5"
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.125"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.86"
simple_logger = "5.0.0"
log = "0.4.22"
clap = { version = "4.5.16", features = ["derive"] }
time = "0.3.36"